--- a/css/brackets.io.css
+++ b/css/brackets.io.css
@@ -91,7 +91,8 @@ a {
 
 a:hover,
 a:focus {
-  color: #047edd;
+  color: #125282;
+  font-size: 20px;
 }
 
 a:active {
@@ -297,7 +298,6 @@ blockquote p {
 
 .nav-link:hover {
   color: #16a193;
-  text-decoration: underline
 }
 
 .w-nav {
